# OneDudeEngine

./: .gitignore  CMakeLists.txt  Memory  README.md  Roadmap.md  TODO  TODO.md  imgui.ini  out.cereal
DynamicModule/src/: DynamicModule.cpp  DynamicModule.h
Editor/src/: Editor.cpp
Engine/src/OD/: CoreModulesStartup.cpp  CoreModulesStartup.h  Define.cpp  Entry.h  OD.h
Sandbox/: ProjectSettings.json  imgui.ini  new.scene  scene.scene  scene1.scene  test.scene  test2.scene
Sandbox/Engine/Models/: Cube.blend1
Sandbox/Engine/ShaderLibrary/: BRDF.glsl  Common.glsl  Core.glsl  GI.glsl  Light.glsl  Lighting.glsl  Shadows.glsl  Vertex.glsl
Sandbox/Engine/Shaders/: BloomCombinePostFX.glsl  BloomHorizontalPostFX.glsl  BloomPrefilterPostFX.glsl  BloomVerticalPostFX.glsl  EquirectangularToCubemap.glsl  Font.glsl  GamaCorrectionPP.glsl  Gizmos.glsl  IrradianceConvolution.glsl  Lit.glsl  LitFade.glsl  LitInstancing.glsl  LitSkinned.glsl  Model.glsl  Prefilter.glsl  ShadowMap.glsl  SkyboxCubemap.glsl  StandDiffuse.glsl  StandDiffuse2.glsl  TestLib.glsl  ToneMappingACESPostFX.glsl  ToneMappingNeutralPostFX.glsl  ToneMappingReinhardPostFX.glsl  Unlit.glsl  UnlitBlend.glsl  _BaseShader.glsl  _BaseShaderInputs.glsl  _BaseShaderTest.glsl
Sandbox/Sandbox/: test.prefab
Sandbox/Sandbox/Animations/: RumbaDancing3.glb
Sandbox/Sandbox/LuaScripts/: Test.lua  Test2.lua
Sandbox/Sandbox/Materials/: test2.material
Sandbox/Sandbox/Models/: Boid.glb  ClipmapMesh_High1.glb  NavmeshEnviromentTest.blend  TerrainTesselationMesh.glb  Test.fbx  guy.blend  guy.gltf
Sandbox/Sandbox/Shaders/: BasicPostProcessing.glsl  Minicraft.glsl  MinicraftWater.glsl  TerrainClipmapMesh.glsl  UberShaderTest.glsl  UniformBufferInstancing.glsl  UnlitColor.glsl  test.glsl
Sandbox/src/: GameEntry.cpp
Sandbox/src/Minicraft/: ChunkBuilderLayer.cpp  ChunkBuilderLayer.h  Minicraft.h  VextexData.h  WorldManagerSystem.cpp  WorldManagerSystem.h
Sandbox/src/ProceduralTerrain/: MeshGenerator.h  ProceduralTerrain.h
Sandbox/src/Samples/: Animation.h  Animator.h  BaseMesh.h  Boids.h  CharacterController.h  DynamicModule.h  ECS.h  Framebuffer.h  Light.h  LoadModel.h  Navmesh.h  Physics.h  RenderPipeline.h  Sponza.h  SynthCity.h  UberShader.h  UniformBuffer.h
Sandbox/src/TerrainRenderer/: TerrainRenderer2.h
Sandbox/src/Ultis/: CameraMovement.cpp  CameraMovement.h  FastNoiseLite.h  Ultis.cpp  Ultis.h
Tests/src/: test1.cpp
dynamic_module/src/: DynamicModule.cpp  DynamicModule.h
engine/src/OD/: CoreModulesStartup.cpp  CoreModulesStartup.h  Define.cpp  Defines.h  Entry.h  OD.h  pch.h
game/src/: 10_SynthCity.h  11_Animator.h  12_UniformBuffer.h  13_NewRenderPipeline.h  14_CommandBuffer.h  15_UberShader.h  1_BaseMesh.h  2_LoadModel.h  3_Light.h  4_ECS.h  5_Framebuffer.h  6_Physics.h  7_Animation.h  9_Serialization.h  Animation_7.h  BaseMesh_1.h  CameraMovement.cpp  CameraMovement.h  ECS_4.h  GameEntry.cpp  Light_3.h  LoadModel_2.h  Physics_6.h  Serialization_9.h  SkinnedMesh_7.h  SkinnedMesh_8.h  SynthCity_10.h  Ultis.h
game/src/Minicraft/: ChunkBuilderLayer.cpp  ChunkBuilderLayer.h  ChunkComponent.h  ChunkData.h  Minicraft.cpp  Minicraft.h  VextexData.h  WorldManagerSystem.cpp  WorldManagerSystem.h
game/src/ProceduralTerrain/: EndlessTerrain.cpp  EndlessTerrain.h  MeshGenerator.h  Noise.h  ProceduralTerrain.h
game/src/Samples/: Animation.h  Animator.h  BaseMesh.h  Boids.h  CharacterController.h  DynamicModule.h  ECS.h  Light.h  LoadModel.h  Navmesh.h  Physics.h  RenderPipeline.h  Serialization.h  Sponza.h  SynthCity.h  UberShader.h  UniformBuffer.h
game/src/TerrainRenderer/: TerrainRenderer.h  TerrainRenderer2.h
game/src/Tests/: 10_SynthCity.h  11_Animator.h  12_UniformBuffer.h  13_NewRenderPipeline.h  14_CommandBuffer.h  15_UberShader.h  16_DynamicModule.h  17_CharacterController.h  18_Navmesh.h  1_BaseMesh.h  2_LoadModel.h  3_Light.h  4_ECS.h  5_Framebuffer.h  6_Physics.h  7_Animation.h  9_Serialization.h
game/src/Ultis/: CameraMovement.h  FastNoiseLite.cpp  Ultis.cpp  Ultis.h
res/: DynamicLoad.scene  Editor.Save  Models.blend  Models.blend1  mat1.material  new.scene  scene.scene  scene1.scene  scene2.scene  temp.scene  tempHotReload.scene  test.scene  test_1  test_1.cereal  test_new.scene  tt.scene
res/Builtins/Shaders/: Blit.glsl  Font.glsl  GamaCorrectionPP.glsl  Gizmos.glsl  ShadowMap.glsl  SkinnedModel.glsl  SkyboxCubemap.glsl  Sprite.glsl  StandDiffuse.glsl  StandDiffuse2.glsl  Unlit.glsl  UnlitBlend.glsl
res/Engine/Models/: Cube.blend  Cube.mtl
res/Engine/ShaderLibrary/: BRDF.glsl  Common.glsl  Core.glsl  GI.glsl  Light.glsl  Lighting.glsl  Shadows.glsl  Surface.glsl  Vertex.glsl
res/Engine/Shaders/: Blit.glsl  BloomCombinePostFX.glsl  BloomHorizontalPostFX.glsl  BloomPrefilterPostFX.glsl  BloomVerticalPostFX.glsl  ColorGradingPostFX.glsl  Error.glsl  Font.glsl  GamaCorrectionPP.glsl  Gizmos.glsl  IrradianceConvolution.glsl  Lit.glsl  LitFade.glsl  LitInstancing.glsl  LitSkinned.glsl  LitTransparent.glsl  Model.glsl  Prefilter.glsl  ShadowMap.glsl  ShadowMapCascade.glsl  SkinnedModel.glsl  SkyboxCubemap.glsl  SkyboxGradient.glsl  Sprite.glsl  StandDiffuse.glsl  StandDiffuse2.glsl  TestLib.glsl  ToneMappingACESPostFX.glsl  ToneMappingNeutralPostFX.glsl  ToneMappingPP.glsl  ToneMappingReinhardPostFX.glsl  Unlit.glsl  UnlitBlend.glsl  brdf.glsl
res/Game/Animations/: Char8.glb  RumbaDancing.dae  RumbaDancing2.dae  SillyDancing.fbx
res/Game/Materials/: mat1.material  test.material
res/Game/Models/: Boid.blend  ClipmapMesh.glb  Cube.glb  NavmeshEnviromentTest.blend1  Sphere.glb  monkey.gltf  untitled.gltf
res/Game/Shaders/: BasicPostProcessing.glsl  Minicraft.glsl  SkinnedModel.glsl  UberShaderTest.glsl  light.glsl  (+5 more)
res/models/: Floor1.mtl  cube.gltf  plane.glb  tri.gltf
res/shaders/: light.glsl  model.glsl  model_2.glsl
res/test/: 10.debug_quad_depth.fs  10.shadow_mapping.fs  10.shadow_mapping.vs  10.shadow_mapping_depth.fs  10.shadow_mapping_depth.gs
res/textures/: floor.material  rock.material
test/src/: mesh.h  model.h  shader.h  shadow_mapping.cpp
tests/src/: test1.cpp
(+795 files in other folders)
